[package]
name = "openstranded-common-crafting"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-or-later"
description = "OpenStranded crafting domain types: RecipeDef, RecipeRequirement, RecipeResult"
repository = "https://github.com/OpenStranded/common-crafting"
homepage = "https://github.com/OpenStranded/common-crafting"
documentation = "https://docs.rs/openstranded-common-crafting"
readme = "README.md"
keywords = ["game", "stranded", "survival", "openstranded", "crafting"]
categories = ["game-engines", "game-development"]
exclude = ["/.gitignore", "Cargo.lock"]

[dependencies]
serde = { version = "1", features = ["derive"] }
